// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render Failed 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c4 a {
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Select Integration Type
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
        kind="danger"
      >
        some error message
      </div>
    </div>
  </div>
</div>
`;

exports[`render NoPluginsEnrolled 1`] = `
.c3 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c15 {
  box-sizing: border-box;
  margin-bottom: 8px;
  margin-top: 16px;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  font-weight: 600;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c16 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c17 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c11 {
  display: block;
  outline: none;
  margin-top: 16px;
  margin-bottom: 16px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 8px;
  display: flex;
  gap: 16px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  display: flex;
  color: inherit;
  text-decoration: none;
  flex-direction: column;
  align-items: center;
  position: relative;
  border-radius: 4px;
  height: 170px;
  width: 170px;
  background-color: rgba(255,255,255,0.07);
  text-align: center;
  cursor: pointer;
  opacity: 1;
}

.c10:hover {
  background-color: rgba(255,255,255,0.13);
}

.c12 {
  display: inline-block;
  height: 100%;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 8px;
  position: relative;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Select Integration Type
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              font-weight="bold"
            >
              No-Code Integrations
            </div>
            <div
              class="c8"
            >
              Hosted Integrations eliminate the setup work so you can quickly connect applications to Teleport for alerting and other useful functions. This list is short for now, but it will grow with time!
            </div>
          </div>
          <div
            class="c9"
          >
            <a
              class="c10"
              data-testid="tile"
              href="/web/integrations/new/slack"
            >
              <img
                class="c11 c12"
                src="file_stub"
              />
              <div
                class="c13"
              >
                <div
                  class="c14"
                >
                  Slack
                </div>
              </div>
            </a>
            <a
              class="c10"
              data-testid="tile"
              href="/web/integrations/new/aws-oidc"
            >
              <div
                class="c15"
              >
                <svg
                  data-testid="svg"
                  fill="#FFFFFF"
                  height="80"
                  viewBox="0 0 304 182"
                  width="80"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M86.4 66.4c0 3.7.4 6.7 1.1 8.9.8 2.2 1.8 4.6 3.2 7.2.5.8.7 1.6.7 2.3 0 1-.6 2-1.9 3L83.2 92c-.9.6-1.8.9-2.6.9-1 0-2-.5-3-1.4-1.4-1.5-2.6-3.1-3.6-4.7-1-1.7-2-3.6-3.1-5.9-7.8 9.2-17.6 13.8-29.4 13.8-8.4 0-15.1-2.4-20-7.2-4.9-4.8-7.4-11.2-7.4-19.2 0-8.5 3-15.4 9.1-20.6 6.1-5.2 14.2-7.8 24.5-7.8 3.4 0 6.9.3 10.6.8 3.7.5 7.5 1.3 11.5 2.2v-7.3c0-7.6-1.6-12.9-4.7-16-3.2-3.1-8.6-4.6-16.3-4.6-3.5 0-7.1.4-10.8 1.3-3.7.9-7.3 2-10.8 3.4-1.6.7-2.8 1.1-3.5 1.3-.7.2-1.2.3-1.6.3-1.4 0-2.1-1-2.1-3.1v-4.9c0-1.6.2-2.8.7-3.5.5-.7 1.4-1.4 2.8-2.1 3.5-1.8 7.7-3.3 12.6-4.5C41 1.9 46.2 1.3 51.7 1.3c11.9 0 20.6 2.7 26.2 8.1 5.5 5.4 8.3 13.6 8.3 24.6v32.4zM45.8 81.6c3.3 0 6.7-.6 10.3-1.8 3.6-1.2 6.8-3.4 9.5-6.4 1.6-1.9 2.8-4 3.4-6.4.6-2.4 1-5.3 1-8.7v-4.2c-2.9-.7-6-1.3-9.2-1.7-3.2-.4-6.3-.6-9.4-.6-6.7 0-11.6 1.3-14.9 4-3.3 2.7-4.9 6.5-4.9 11.5 0 4.7 1.2 8.2 3.7 10.6 2.4 2.5 5.9 3.7 10.5 3.7zm80.3 10.8c-1.8 0-3-.3-3.8-1-.8-.6-1.5-2-2.1-3.9L96.7 10.2c-.6-2-.9-3.3-.9-4 0-1.6.8-2.5 2.4-2.5h9.8c1.9 0 3.2.3 3.9 1 .8.6 1.4 2 2 3.9l16.8 66.2 15.6-66.2c.5-2 1.1-3.3 1.9-3.9.8-.6 2.2-1 4-1h8c1.9 0 3.2.3 4 1 .8.6 1.5 2 1.9 3.9l15.8 67 17.3-67c.6-2 1.3-3.3 2-3.9.8-.6 2.1-1 3.9-1h9.3c1.6 0 2.5.8 2.5 2.5 0 .5-.1 1-.2 1.6-.1.6-.3 1.4-.7 2.5l-24.1 77.3c-.6 2-1.3 3.3-2.1 3.9-.8.6-2.1 1-3.8 1h-8.6c-1.9 0-3.2-.3-4-1-.8-.7-1.5-2-1.9-4L156 23l-15.4 64.4c-.5 2-1.1 3.3-1.9 4-.8.7-2.2 1-4 1h-8.6zm128.5 2.7c-5.2 0-10.4-.6-15.4-1.8-5-1.2-8.9-2.5-11.5-4-1.6-.9-2.7-1.9-3.1-2.8-.4-.9-.6-1.9-.6-2.8v-5.1c0-2.1.8-3.1 2.3-3.1.6 0 1.2.1 1.8.3.6.2 1.5.6 2.5 1 3.4 1.5 7.1 2.7 11 3.5 4 .8 7.9 1.2 11.9 1.2 6.3 0 11.2-1.1 14.6-3.3 3.4-2.2 5.2-5.4 5.2-9.5 0-2.8-.9-5.1-2.7-7-1.8-1.9-5.2-3.6-10.1-5.2L246 52c-7.3-2.3-12.7-5.7-16-10.2-3.3-4.4-5-9.3-5-14.5 0-4.2.9-7.9 2.7-11.1 1.8-3.2 4.2-6 7.2-8.2 3-2.3 6.4-4 10.4-5.2 4-1.2 8.2-1.7 12.6-1.7 2.2 0 4.5.1 6.7.4 2.3.3 4.4.7 6.5 1.1 2 .5 3.9 1 5.7 1.6 1.8.6 3.2 1.2 4.2 1.8 1.4.8 2.4 1.6 3 2.5.6.8.9 1.9.9 3.3v4.7c0 2.1-.8 3.2-2.3 3.2-.8 0-2.1-.4-3.8-1.2-5.7-2.6-12.1-3.9-19.2-3.9-5.7 0-10.2.9-13.3 2.8-3.1 1.9-4.7 4.8-4.7 8.9 0 2.8 1 5.2 3 7.1 2 1.9 5.7 3.8 11 5.5l14.2 4.5c7.2 2.3 12.4 5.5 15.5 9.6 3.1 4.1 4.6 8.8 4.6 14 0 4.3-.9 8.2-2.6 11.6-1.8 3.4-4.2 6.4-7.3 8.8-3.1 2.5-6.8 4.3-11.1 5.6-4.5 1.4-9.2 2.1-14.3 2.1z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M273.5 143.7c-32.9 24.3-80.7 37.2-121.8 37.2-57.6 0-109.5-21.3-148.7-56.7-3.1-2.8-.3-6.6 3.4-4.4 42.4 24.6 94.7 39.5 148.8 39.5 36.5 0 76.6-7.6 113.5-23.2 5.5-2.5 10.2 3.6 4.8 7.6z"
                    fill="#f90"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M287.2 128.1c-4.2-5.4-27.8-2.6-38.5-1.3-3.2.4-3.7-2.4-.8-4.5 18.8-13.2 49.7-9.4 53.3-5 3.6 4.5-1 35.4-18.6 50.2-2.7 2.3-5.3 1.1-4.1-1.9 4-9.9 12.9-32.2 8.7-37.5z"
                    fill="#f90"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="c14"
              >
                Amazon Web Services
                <br />
                OIDC
              </div>
            </a>
          </div>
        </div>
        <div
          class="c5"
        >
          <div
            class="c7"
            font-weight="bold"
          >
            Self-Hosted Plugins
          </div>
          <div
            class="c16"
          >
            There is a wide variety of plugins that you can source from the Teleport GitHub repository. See below for a sampling, or check out the base repo at
             
            <a
              class="c17"
              href="https://github.com/gravitational/teleport-plugins"
              rel="noreferrer"
              target="_blank"
            >
              https://github.com/gravitational/teleport-plugins
            </a>
            . Self-hosted plugins will not show up in your integration list, and must be managed outside of the Teleport UI.
          </div>
          <div
            class="c9"
          >
            <a
              class="c17 c10"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/pagerduty"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c11 c12"
                src="file_stub"
              />
              <div
                class="c13"
              >
                <div
                  class="c14"
                >
                  PagerDuty
                </div>
              </div>
            </a>
            <a
              class="c17 c10"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/email"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c11 c12"
                src="file_stub"
              />
              <div
                class="c13"
              >
                <div
                  class="c14"
                >
                  Email
                </div>
              </div>
            </a>
            <a
              class="c17 c10"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/jira"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c11 c12"
                src="file_stub"
              />
              <div
                class="c13"
              >
                <div
                  class="c14"
                >
                  Jira
                </div>
              </div>
            </a>
            <a
              class="c17 c10"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/discord"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c11 c12"
                src="file_stub"
              />
              <div
                class="c13"
              >
                <div
                  class="c14"
                >
                  Discord
                </div>
              </div>
            </a>
            <a
              class="c17 c10"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/mattermost"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c11 c12"
                src="file_stub"
              />
              <div
                class="c13"
              >
                <div
                  class="c14"
                >
                  Mattermost
                </div>
              </div>
            </a>
            <a
              class="c17 c10"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/msteams"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c11 c12"
                src="file_stub"
              />
              <div
                class="c13"
              >
                <div
                  class="c14"
                >
                  Microsoft Teams
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render Processing 1`] = `
.c3 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  margin: 72px;
  text-align: center;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Select Integration Type
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      />
    </div>
  </div>
</div>
`;

exports[`render SlackAlreadyEnrolled 1`] = `
.c3 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 8px;
  margin-top: 16px;
}

.c16 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  margin-left: 4px;
  color: #00BFA5;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  font-weight: 600;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c10 {
  color: #009EFF;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c12 {
  display: block;
  outline: none;
  margin-top: 16px;
  margin-bottom: 16px;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.c5 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 8px;
  display: flex;
  gap: 16px;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  flex-shrink: 0;
  border-bottom: 1px solid rgba(255,255,255,0.07);
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

.c11 {
  box-sizing: border-box;
  display: flex;
  color: inherit;
  text-decoration: none;
  flex-direction: column;
  align-items: center;
  position: relative;
  border-radius: 4px;
  height: 170px;
  width: 170px;
  background-color: rgba(255,255,255,0.07);
  text-align: center;
  cursor: pointer;
}

.c18 {
  box-sizing: border-box;
  display: flex;
  color: inherit;
  text-decoration: none;
  flex-direction: column;
  align-items: center;
  position: relative;
  border-radius: 4px;
  height: 170px;
  width: 170px;
  background-color: rgba(255,255,255,0.07);
  text-align: center;
  cursor: pointer;
  opacity: 1;
}

.c18:hover {
  background-color: rgba(255,255,255,0.13);
}

.c13 {
  display: inline-block;
  height: 100%;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 8px;
  position: relative;
}

.c17 {
  position: absolute;
  display: inline-flex;
  align-items: center;
  top: 0;
  bottom: 0;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        Select Integration Type
      </div>
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              font-weight="bold"
            >
              No-Code Integrations
            </div>
            <div
              class="c8"
            >
              Hosted Integrations eliminate the setup work so you can quickly connect applications to Teleport for alerting and other useful functions. This list is short for now, but it will grow with time!
            </div>
          </div>
          <div
            class="c9"
          >
            <a
              class="c10 c11"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/slack"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c12 c13"
                src="file_stub"
              />
              <div
                class="c14"
              >
                <div
                  class="c15"
                >
                  Slack
                   
                  <span
                    class="c16 icon icon-check c17"
                    color="success"
                  />
                </div>
              </div>
            </a>
            <a
              class="c18"
              data-testid="tile"
              href="/web/integrations/new/aws-oidc"
            >
              <div
                class="c19"
              >
                <svg
                  data-testid="svg"
                  fill="#FFFFFF"
                  height="80"
                  viewBox="0 0 304 182"
                  width="80"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M86.4 66.4c0 3.7.4 6.7 1.1 8.9.8 2.2 1.8 4.6 3.2 7.2.5.8.7 1.6.7 2.3 0 1-.6 2-1.9 3L83.2 92c-.9.6-1.8.9-2.6.9-1 0-2-.5-3-1.4-1.4-1.5-2.6-3.1-3.6-4.7-1-1.7-2-3.6-3.1-5.9-7.8 9.2-17.6 13.8-29.4 13.8-8.4 0-15.1-2.4-20-7.2-4.9-4.8-7.4-11.2-7.4-19.2 0-8.5 3-15.4 9.1-20.6 6.1-5.2 14.2-7.8 24.5-7.8 3.4 0 6.9.3 10.6.8 3.7.5 7.5 1.3 11.5 2.2v-7.3c0-7.6-1.6-12.9-4.7-16-3.2-3.1-8.6-4.6-16.3-4.6-3.5 0-7.1.4-10.8 1.3-3.7.9-7.3 2-10.8 3.4-1.6.7-2.8 1.1-3.5 1.3-.7.2-1.2.3-1.6.3-1.4 0-2.1-1-2.1-3.1v-4.9c0-1.6.2-2.8.7-3.5.5-.7 1.4-1.4 2.8-2.1 3.5-1.8 7.7-3.3 12.6-4.5C41 1.9 46.2 1.3 51.7 1.3c11.9 0 20.6 2.7 26.2 8.1 5.5 5.4 8.3 13.6 8.3 24.6v32.4zM45.8 81.6c3.3 0 6.7-.6 10.3-1.8 3.6-1.2 6.8-3.4 9.5-6.4 1.6-1.9 2.8-4 3.4-6.4.6-2.4 1-5.3 1-8.7v-4.2c-2.9-.7-6-1.3-9.2-1.7-3.2-.4-6.3-.6-9.4-.6-6.7 0-11.6 1.3-14.9 4-3.3 2.7-4.9 6.5-4.9 11.5 0 4.7 1.2 8.2 3.7 10.6 2.4 2.5 5.9 3.7 10.5 3.7zm80.3 10.8c-1.8 0-3-.3-3.8-1-.8-.6-1.5-2-2.1-3.9L96.7 10.2c-.6-2-.9-3.3-.9-4 0-1.6.8-2.5 2.4-2.5h9.8c1.9 0 3.2.3 3.9 1 .8.6 1.4 2 2 3.9l16.8 66.2 15.6-66.2c.5-2 1.1-3.3 1.9-3.9.8-.6 2.2-1 4-1h8c1.9 0 3.2.3 4 1 .8.6 1.5 2 1.9 3.9l15.8 67 17.3-67c.6-2 1.3-3.3 2-3.9.8-.6 2.1-1 3.9-1h9.3c1.6 0 2.5.8 2.5 2.5 0 .5-.1 1-.2 1.6-.1.6-.3 1.4-.7 2.5l-24.1 77.3c-.6 2-1.3 3.3-2.1 3.9-.8.6-2.1 1-3.8 1h-8.6c-1.9 0-3.2-.3-4-1-.8-.7-1.5-2-1.9-4L156 23l-15.4 64.4c-.5 2-1.1 3.3-1.9 4-.8.7-2.2 1-4 1h-8.6zm128.5 2.7c-5.2 0-10.4-.6-15.4-1.8-5-1.2-8.9-2.5-11.5-4-1.6-.9-2.7-1.9-3.1-2.8-.4-.9-.6-1.9-.6-2.8v-5.1c0-2.1.8-3.1 2.3-3.1.6 0 1.2.1 1.8.3.6.2 1.5.6 2.5 1 3.4 1.5 7.1 2.7 11 3.5 4 .8 7.9 1.2 11.9 1.2 6.3 0 11.2-1.1 14.6-3.3 3.4-2.2 5.2-5.4 5.2-9.5 0-2.8-.9-5.1-2.7-7-1.8-1.9-5.2-3.6-10.1-5.2L246 52c-7.3-2.3-12.7-5.7-16-10.2-3.3-4.4-5-9.3-5-14.5 0-4.2.9-7.9 2.7-11.1 1.8-3.2 4.2-6 7.2-8.2 3-2.3 6.4-4 10.4-5.2 4-1.2 8.2-1.7 12.6-1.7 2.2 0 4.5.1 6.7.4 2.3.3 4.4.7 6.5 1.1 2 .5 3.9 1 5.7 1.6 1.8.6 3.2 1.2 4.2 1.8 1.4.8 2.4 1.6 3 2.5.6.8.9 1.9.9 3.3v4.7c0 2.1-.8 3.2-2.3 3.2-.8 0-2.1-.4-3.8-1.2-5.7-2.6-12.1-3.9-19.2-3.9-5.7 0-10.2.9-13.3 2.8-3.1 1.9-4.7 4.8-4.7 8.9 0 2.8 1 5.2 3 7.1 2 1.9 5.7 3.8 11 5.5l14.2 4.5c7.2 2.3 12.4 5.5 15.5 9.6 3.1 4.1 4.6 8.8 4.6 14 0 4.3-.9 8.2-2.6 11.6-1.8 3.4-4.2 6.4-7.3 8.8-3.1 2.5-6.8 4.3-11.1 5.6-4.5 1.4-9.2 2.1-14.3 2.1z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M273.5 143.7c-32.9 24.3-80.7 37.2-121.8 37.2-57.6 0-109.5-21.3-148.7-56.7-3.1-2.8-.3-6.6 3.4-4.4 42.4 24.6 94.7 39.5 148.8 39.5 36.5 0 76.6-7.6 113.5-23.2 5.5-2.5 10.2 3.6 4.8 7.6z"
                    fill="#f90"
                    fill-rule="evenodd"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M287.2 128.1c-4.2-5.4-27.8-2.6-38.5-1.3-3.2.4-3.7-2.4-.8-4.5 18.8-13.2 49.7-9.4 53.3-5 3.6 4.5-1 35.4-18.6 50.2-2.7 2.3-5.3 1.1-4.1-1.9 4-9.9 12.9-32.2 8.7-37.5z"
                    fill="#f90"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="c15"
              >
                Amazon Web Services
                <br />
                OIDC
              </div>
            </a>
          </div>
        </div>
        <div
          class="c5"
        >
          <div
            class="c7"
            font-weight="bold"
          >
            Self-Hosted Plugins
          </div>
          <div
            class="c20"
          >
            There is a wide variety of plugins that you can source from the Teleport GitHub repository. See below for a sampling, or check out the base repo at
             
            <a
              class="c10"
              href="https://github.com/gravitational/teleport-plugins"
              rel="noreferrer"
              target="_blank"
            >
              https://github.com/gravitational/teleport-plugins
            </a>
            . Self-hosted plugins will not show up in your integration list, and must be managed outside of the Teleport UI.
          </div>
          <div
            class="c9"
          >
            <a
              class="c10 c18"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/pagerduty"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c12 c13"
                src="file_stub"
              />
              <div
                class="c14"
              >
                <div
                  class="c15"
                >
                  PagerDuty
                </div>
              </div>
            </a>
            <a
              class="c10 c18"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/email"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c12 c13"
                src="file_stub"
              />
              <div
                class="c14"
              >
                <div
                  class="c15"
                >
                  Email
                </div>
              </div>
            </a>
            <a
              class="c10 c18"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/jira"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c12 c13"
                src="file_stub"
              />
              <div
                class="c14"
              >
                <div
                  class="c15"
                >
                  Jira
                </div>
              </div>
            </a>
            <a
              class="c10 c18"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/discord"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c12 c13"
                src="file_stub"
              />
              <div
                class="c14"
              >
                <div
                  class="c15"
                >
                  Discord
                </div>
              </div>
            </a>
            <a
              class="c10 c18"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/mattermost"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c12 c13"
                src="file_stub"
              />
              <div
                class="c14"
              >
                <div
                  class="c15"
                >
                  Mattermost
                </div>
              </div>
            </a>
            <a
              class="c10 c18"
              data-testid="tile"
              href="https://github.com/gravitational/teleport-plugins/tree/master/access/msteams"
              rel="noreferrer"
              target="_blank"
            >
              <img
                class="c12 c13"
                src="file_stub"
              />
              <div
                class="c14"
              >
                <div
                  class="c15"
                >
                  Microsoft Teams
                </div>
              </div>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
